--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
         .login-button:hover {
             background-color: #0056b3;
         }
+        .message {
+            margin-top: 15px;
+            padding: 10px;
+            border-radius: 4px;
+            background-color: #d4edda;
+            color: #155724;
+            border: 1px solid #c3e6cb;
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -69,7 +78,7 @@
 <div class="login-container">
     <img src="logo.png" alt="Company Logo" class="logo">
     <h2>Sign In</h2>
-    <form action="#" method="POST">
+    <form id="loginForm">
         <div class="input-group">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
@@ -80,7 +89,15 @@
         </div>
         <button type="submit" class="login-button">Sign In</button>
     </form>
+    <div id="message" class="message">Request submitted</div>
 </div>
+
+<script>
+    document.getElementById('loginForm').addEventListener('submit', function(event) {
+        event.preventDefault();
+        document.getElementById('message').style.display = 'block';
+    });
+</script>
 
 </body>
 </html>
